airflow-setup/airflow/7-stspostgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: airflow-postgre
  namespace: develop
  labels:
    app: airflow-postgre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-postgre
  updateStrategy:
    type: RollingUpdate
  serviceName: "airflow-postgre"
  template:
    metadata:
      labels:
        app: airflow-postgre
    spec:
      containers:
      - name: safrapay-dataproc-airflow
        image: gustcol/cidacs:postgre-0.0.1
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 512Mi
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: airflow-postgres
      imagePullSecrets:
      - name: docker-login
      volumes:
        - name: airflow-postgres
          persistentVolumeClaim:
            claimName: airflow-postgres
