airflow-setup/airflow/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver
  namespace: develop
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: web-ui
  selector:
    app: airflow

---
apiVersion: v1
kind: Service
metadata:
  name: airflow-postgre
  namespace: develop
spec:
  ports:
  - name: postgre
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: airflow-postgre
  type: ClusterIP
